feat: add crud book review and update api spec
closes #16
